Updated RPS with JS for interactivity

--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
 <head>
   <meta charset="utf-8">
   <title>RPS</title>
+  <link href="reset.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
-
-  <p>Rock Paper Scissors</p>
-
+  <div id="RPS">
+    <p id="player-score">Player: 0</p>
+    <div id="player-selection">
+      <button>Rock</button>
+      <button>Paper</button>
+      <button>Scissors</button>
+    </div>
+    
+    <div id="cpu-selection">
+      <button>Rock</button>
+      <button>Paper</button>
+      <button>Scissors</button>
+    </div>
+    <p id="cpu-score">CPU: 0</p>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 
